implementations/rust/ockam/ockam/tests/node_test/fail_if_does_not_have_return_type.rs
#[ockam::test]
async fn my_test(ctx: &mut ockam_node::Context) {
    ctx.address();
}
